ns-integrador/worker-processa-repo/hml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hml-worker-processa-repo
  namespace: hml-ns-integrador
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hml-worker-processa-repo
  type: ClusterIP
